--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+spring.application.name=ECom-Management
+logging.level.root=info
+server.port=9015
+spring.datasource.url=jdbc:h2:mem:mydb
+spring.datasource.name=sa
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.platform=h2
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
+server.servlet.context-path=/ecom
+
+
